fix: fix overflow of slider at home page

--- a/christmas-shop/pages/home/style.css
+++ b/christmas-shop/pages/home/style.css
@@ -307,6 +307,7 @@ body {
     background-size: cover, contain, auto;
     background-repeat: no-repeat;
     background-position: center;
+    overflow: hidden;
 }
 
 .slider-text-content {
